# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.347 2007-02-13 10:53:38 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS HEAD (????/??/??)
 - (2007/02/12) Added pending time selection feature for generic agent.
 - (2007/02/07) Moved to dtl block in customer ticket zoom view.
 - (2007/02/07) Moved default WebMaxFileUpload config option from 5 MB
    to 10 MB.
 - (2007/01/31) Fixed Free Field output in AgentTicketForward and
    AgentTicketPhoneOutbound.
 - (2007/01/30) Added 4 ticket freetime fields and improved freetime function.
 - (2007/01/30) Relocated valid functionality to new Valid.pm to move it
   out from Kernel/System/DB.pm.
 - (2007/01/18) Added X-OTRS-Lock and X-OTRS-FollowUp-Lock header for
    PostMaster.
 - (2007/01/17) Relocated agent preferences button.
 - (2007/01/17) Improved freetime feature, unset freetime is now possible by
    agent and customer GUI.
 - (2007/01/03) Heavy improvement of PerformanceLog feature, show detail
    view of each frontend module now.
 - (2007/01/03) Added config option for die or log is ldap/radius auth server
    is not available.
 - (2006/12/21) Improved description of Email- and Phone-Ticket in navigation.
 - (2006/12/21) Added config option to use SystemID in follow up detection or
    not (Ticket::NumberGenerator::CheckSystemID).
 - (2006/12/21) Added config option for follow-up state of tickets which
    was was already closed (Ticket::Core::PostMaster::PostmasterFollowUpStateClosed).
 - (2006/12/19) Added config option Ticket::NumberGenerator::CheckSystemID
    to configure if SystemID is used in follow up detection.
 - (2006/12/14) Removed old compat. CreateTicketNr()/CheckTicketNr() in
    Kernel/System/Ticket.pm and Kernel/System/Ticket/Number/*.pm - so